Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3470

incompatbile error handling in llog_open()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.4.1, Lustre 2.5.0
    • Lustre 1.8.9, Lustre 2.4.1, Lustre 2.5.0
    • 3
    • 8698

      In master version, llog_open() calls llog_alloc_handle() bug does not handle return value correctly. It takes NULL as the error return value. But llog_alloc_handle() returns ERR_PTR(-ENOMEM) instead when error.

      This is also an problem in llog_client_create() in Lustre-1.8.9. This problem is related to LU-980.

            bobbielind Bobbie Lind (Inactive)
            lixi Li Xi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: